force-app/main/default/objects/Community_Partner__c/Community_Partner__c.object-meta.xml
<CustomObject>
    <label>Community Partner</label>
    <nameField>
        <label>Community Partner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>