force-app/main/default/objects/Community_Partner__c/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>