force-app/main/default/objects/Community_Partner__c/fields/Notes_Comment__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comment__c</fullName>
    <label>Notes Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>