force-app/main/default/objects/Community_Partner__c/fields/Partner_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Org_Name__c</fullName>
    <label>Partner Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>