force-app/main/default/objects/Community_Partner__c/fields/Type_of_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Partnership__c</fullName>
    <label>Type of Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Collaborator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>