force-app/main/default/objects/Community_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Org_Name__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Type_of_Partnership__c</columns>
    <columns>Contact_Info__c</columns>
    <columns>Partnership_Start_Date__c</columns>
    <columns>Notes_Comment__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>